# notification_module

./: .example.consumer.env  .example.database.env  .example.env  README.md  docker-compose.yml  main.py  main_cons.py  pyproject.toml
alembic/versions/: 2022-05-23-19-48-44_0200e516cae8_initial_migration.py
src/api/v1/: api.py
src/api/v1/endpoints/: notificaiton.py
src/app/: app.py
src/core/: config.py  consumer.py  dependencies.py
src/core/configs/: __init__.py  loguru_config.py
src/crud/: __init__.py  base.py  crud_notification.py
src/db/models/: __init__.py  notification.py
src/schemas/: __init__.py  notification.py
